tests/js_error/source_locations/expression/update/set_named_property.exp
Error: 
  ┌ tests/js_error/source_locations/expression/update/set_named_property.js:6:11
  |
6 |     throw new Error();
  |           ^
Stack trace:
  at set foo (tests/js_error/source_locations/expression/update/set_named_property.js:6:11)
  at <global> (tests/js_error/source_locations/expression/update/set_named_property.js:10:4)